# DESDEOv2

./: .gitignore  LICENSE  MANIFEST.in  README.md  black.sh  check.sh  format.sh  generate_requirements.sh  logger.cfg  pyproject.toml  requirements-dev-base.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tags
desdeo/: logger.cfg
desdeo/methods/: EvolutionaryMethod.py  InteractiveMethod.py  Nautilus.py  Nimbus.py
desdeo/problem/: Constraint.py  Objective.py  Problem.py  Variable.py
desdeo/solver/: ASF.py  NumericalMethods.py  PointSolver.py  ScalarSolver.py  Solver.py
desdeo/utils/: frozen.py
desdeov2/methods/: InteractiveMethod.py  Nautilus.py  Nimbus.py
desdeov2/problem/: Problem.py  Variable.py  __init__.py
desdeov2/solver/: ASF.py  PointSolver.py  ScalarSolver.py
notebooks/: analytical_problem.ipynb  data_problem.ipynb  enautilus.ipynb  enautilus_article.ipynb  enautilusb.ipynb  nautilus.ipynb  nimbus.ipynb  utils.py
notebooks/data/: decision_result.csv  objective_result.csv
sandbox/: main.py
tests/: conftest.py
tests/method/: conftest.py  test_enautilus.py  test_moead.py  test_nautilus.py  test_snimbus.py
tests/problem/: test_constraint.py  test_data_problem.py  test_objective.py  test_problem.py  test_variable.py
tests/solver/: conftest.py  test_asf.py  test_discrete_solver.py  test_numerical_methods.py  test_point_solver.py  test_scalar_solver.py  test_solver.py
